Feature/jwt (#1)
* feat: add details to token

* fix: correct registration

* refactor: merge UserPrincipal into User

* feat: add PCS creator

* feat: add access control for PCL

* feat: add Sensor creator

* add access control for Sensor

* feat: add Plant creator

* add access control for Plant

* fix: clean up responses

* Update OpenAPI.yml

* Update OpenAPI.yml